jvm_tuning notes updated